Change document innerHtml

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
             <h1 id="result"></h1>
         </div>
     </div>
-    <div class="card container-sm ">
-        <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExeDkybmFwNXNkazN4YWsxbDd1c3NzZXhiOHBkZnFhcmR1aDhlZHhoMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/NTEyfNzEmOSlEmiVVM/giphy.gif"
-            class="img-fluid rounded mx-auto d-block " alt="...">
+    <div id="correctGif" class="card container-sm ">
+        
     </div>
 
 
