--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="card-header">
             Poker Guess
         </div>
-        <div class="card-body text-center">
+        <div  class="card-body text-center">
             <h3> Guess the correct number upto 1 to 10 (1-10) </h3><br>
 
             <img src="https://img.icons8.com/?size=100&id=Gw603WALQQ42&format=png&color=000000" alt="">
@@ -28,7 +28,9 @@
         
 
             <input id="btnGuess" type="button" value="Select" class="btn btn-outline-primary" onclick="Clickbutton()">
-            <h1 id="result"></h1>
+            <h1 class="bs-danger" id="result"></h1>
+            <h5 class="text-body-secondary" id="error-message"></h5>
+
         </div>
     </div>
     <div id="correctGif" class="card container-sm ">
